k8s/frontend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: ec-frontend
  labels: 
    app.kubernetes.io/name: frontend 
    app.kubernetes.io/part-of: ec-microservices
    app.kubernetes.io/version: "1.0.0"
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend 
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: frontend
        app.kubernetes.io/part-of: ec-microservices
        app.kubernetes.io/version: "1.0.0" 
      annotations: 
        prometheus.io/path: "/metrics"
        prometheus.io/scrape: "true"
        prometheus.io/port: "5173"
    
    spec:
      terminationGracePeriodSeconds:  30
      restartPolicy: Always
      containers:
      - name: frontend
        image: ec_site-frontend:latest
        ports:
        - containerPort: 5173
          protocol: TCP  
          name: http-frontend 
        resources:
          requests: 
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi" 
        livenessProbe: 
          httpGet:
            path: /
            port: 5173
          initialDelaySeconds: 10
          periodSeconds: 5
          failureThreshold: 30
        readinessProbe: 
          httpGet:
            path: /
            port: 5173
          initialDelaySeconds: 10
          periodSeconds: 5
          failureThreshold: 30
          
        securityContext: 
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          runAsUser: 1000
          readOnlyRootFilesystem: true 
          capabilities:
            drop:
            - ALL

        volumeMounts: 
        - name: tmp
          mountPath: /tmp 
        - name: config 
          mountPath: /etc/config
        lifecycle:
          postStart:
            exec:
             command: ["/bin/sh", "-c", "echo 'starting' > /tmp/message"]
          preStop:
            exec:
              command: ["/bin/sh", "-c", "sleep 10"]

      volumes:
      - name: tmp 
        emptyDir: {}
      - name: config 
        configMap:
          name: config_map

---
apiVersion: v1
kind: Service
metadata: 
  namespace: ec-frontend
  name: frontend-service
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: ec-microservices
spec: 
  type: ClusterIP
  ports: 
  - port: 5173
    targetPort: 5173
    protocol: TCP 
  selector: 
    app.kubernetes.io/name: frontend
